--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,12 @@ footer {
   align-items: center;
 }
 
+header {
+  width: 100%;
+  padding-left: 15px;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Quattrocento Sans", Verdana, Tahoma, sans-serif;
   margin: 0;
@@ -18,13 +24,14 @@ body {
 nav,
 #hamburger-menu {
   display: none;
+  width: 100%;
 }
 
-nav li {
+/*nav li {
   text-transform: uppercase;
   list-style-type: none;
-  display: inline-flex;
-}
+  display: inline-block;
+}*/
 
 header a {
   color: #11172d;
@@ -33,9 +40,9 @@ header a {
 }
 
 footer a {
-    color: #f5fafc;
-    text-decoration: none;
-    padding: 15px;
+  color: #f5fafc;
+  text-decoration: none;
+  padding: 15px;
 }
 
 h1,
@@ -47,13 +54,31 @@ h2 {
   max-height: 50px;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+.container-shopnav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  min-height: 48vh;
+  max-height: 88vh;
+  margin-bottom: 50px;
+}
+.wrapper {
+  display: inline-grid;
+  grid-template-columns: 0.5fr 2.5fr 0.5fr;
+  gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+  justify-items: center;
+  align-items: center;
+}
+.bottom {
+  grid-column: 2;
+  grid-row: 3;
+  width: fit-content;
+  block-size: fit-content;
+}
 
-.dark-background {
+.waterproof {
   background-color: #11172d;
   color: #f5fafc;
   text-align: center;
@@ -77,7 +102,7 @@ h2 {
   border-color: #f5fafc;
   font-size: 1em;
   margin: 20px 0;
-  display:inline-block;
+  display: inline-block;
 }
 
 /* Hamburger menu */
@@ -88,14 +113,14 @@ h2 {
 }
 
 /* Home */
-.background-men {
+/*.background-men {
   background-image: url(../images/home-man.jpg);
   background-size: cover;
   background-repeat: none;
   background-position-x: left;
   background-position-y: bottom;
   min-height: 48vh;
-  width:100%;
+  width: 100%;
   text-align: center;
   padding-top: 65%;
   box-sizing: border-box;
@@ -103,24 +128,66 @@ h2 {
 
 .background-women {
   background-image: url(../images/home-women.jpg);
+}*/
+
+.item-shop-men {
+  background-image: url(../images/home-man.jpg);
+  background-size: cover;
+  background-position-x: left;
+  background-position-y: bottom;
+  width: 100%;
+  min-height: 48vh;
+  max-height: 100vh;
+}
+
+.item-shop-women {
+  background-image: url(../images/home-women.jpg);
+  background-size: cover;
+  background-position-x: left;
+  background-position-y: center;
 }
 
 /* Media Quieries */
 @media (min-width: 600px) {
   nav {
-    display: block;
+    display: flex;
+    align-items: center;
+    padding: 20px;
   }
 
   header a {
-      color:#f5fafc;
+    color: #f5fafc;
+  }
+
+  nav ul,
+  nav a {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    text-transform: uppercase;
+  }
+
+  nav.flexbox {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  nav ul {
+    display: flex;
+    align-items: right;
+  }
+
+  nav ul li {
+    margin-right: 20px;
   }
 
   .hamburger {
     display: none;
   }
 
-  .container {
-      flex-direction: row;
-  }
+  .container-shopnav {
+    flex-direction: row;
+    margin-bottom: 0px;
   }
 }
