--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,11 @@ body {
   box-sizing: border-box;
 }
 
+p,
+h3 {
+  margin: 0;
+}
+
 nav,
 #hamburger-menu {
   display: none;
@@ -48,6 +53,14 @@ h2 {
   font-family: "Quattrocento", serif;
 }
 
+header.flexbox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  box-sizing: border-box;
+  padding-right: 20px;
+}
 .logo {
   max-height: 50px;
 }
@@ -157,7 +170,56 @@ h2 {
 }
 
 .product-img {
+  grid-column: 1;
+  grid-row-start: 1;
+  grid-row-end: span 2;
   width: 250px;
+  z-index: 1;
+}
+
+.product-card {
+  display: grid;
+  grid-template-columns: 50px 75px 75px 50px;
+  width: 250px;
+  grid-template-rows: 50px auto;
+  grid-row-gap: 5px;
+}
+
+.product-title {
+  grid-column-start: 1;
+  grid-column-end: span 3;
+  grid-row: 3;
+  font-size: 1.5em;
+}
+
+.product-fav {
+  width: 50%;
+  justify-self: center;
+  align-self: center;
+  grid-column: 4;
+  grid-row: 3;
+}
+
+.product-description {
+  grid-column-start: 1;
+  grid-column-end: span 3;
+  grid-row: 4;
+  font-size: 1.125em;
+}
+
+.product-price {
+  grid-column-start: 1;
+  grid-column-end: span 3;
+  grid-row: 7;
+  font-weight: bold;
+  font-size: 1.125em;
+}
+
+.product-sale {
+  grid-column: 1;
+  grid-row-start: 1;
+  z-index: 2;
+  align-self: center;
 }
 
 /* Get updates */
@@ -204,6 +266,7 @@ fieldset {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    height: 110px;
     box-sizing: border-box;
   }
 
