--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ footer {
 header {
   position: fixed;
   top: 0;
+  z-index: 99;
 }
 main {
   margin-top: 110px;
@@ -41,15 +42,28 @@ h2,
 h3 {
   margin: 0;
 }
+
+a {
+  transition: all 0.3s ease-in-out;
+}
+
 /* CTA */
 .cta {
   background-color: #fc8118;
   color: #f5fafc;
-  border-radius: 25px;
+  border-radius: 30px;
   font-size: 1.125em;
   text-decoration: none;
   text-transform: uppercase;
   padding: 15px 40px;
+  box-sizing: border-box;
+}
+
+.cta:hover {
+  background-color: #f5fafc;
+  color: #fc8118;
+  border: 3px solid #fc8118;
+  box-sizing: border-box;
 }
 
 .cta-light {
@@ -61,14 +75,25 @@ h3 {
   display: inline-block;
 }
 
+.cta-light:hover {
+  background-color: #f5fafc;
+  color: #11172d;
+  border: none;
+}
+
 /* HEADER */
 header a,
 footer a {
   color: #f5fafc;
   text-decoration: none;
-  padding: 15px;
+  padding: 0;
   margin: 0;
   text-transform: uppercase;
+}
+
+header a:hover,
+footer a:hover {
+  color: #fc8118;
 }
 
 nav ul,
@@ -79,7 +104,7 @@ footer ul {
 }
 
 header.flexbox {
-  display: flex;
+  display: inline-flex;
   justify-content: flex-end;
   align-items: center;
   width: 100%;
@@ -99,10 +124,13 @@ header.flexbox {
 figure {
   display: inline-flex;
   flex-flow: column;
-  max-width: 36px;
   align-items: center;
   margin: 0;
   flex-grow: 1;
+}
+
+figure img {
+  width: 40%;
 }
 
 figure figcaption {
@@ -112,6 +140,10 @@ figure figcaption {
 
 .hamburger {
   flex-grow: 0;
+}
+
+.hamburger img {
+  width: 50%;
 }
 
 #hamburger-menu {
@@ -176,25 +208,34 @@ figure figcaption {
   padding: 30px 16px;
 }
 
+.waterproof h1 {
+  margin-top: 20px;
+  margin-bottom: 15px;
+}
+
 .waterproof p {
   padding-left: 15%;
   padding-right: 15%;
   line-height: 1.5em;
+  margin-top: 15px;
 }
 
 /* SECTION - Best sellers */
-#title-best-seller {
-  margin-top: 30px;
-  padding-left: 30px;
+section.bestsellers {
+  width: 70%;
+  margin: 30px auto;
+}
+
+.bestsellers h2 {
+  margin-bottom: 20px;
 }
 
 .container-best-sellers {
-  padding-left: 30px;
-  padding-right: 30px;
   display: flex;
   width: 100%;
   overflow-x: auto;
   box-sizing: border-box;
+  gap: 25px;
 }
 
 .product-img {
@@ -268,7 +309,7 @@ figure figcaption {
 }
 
 /* SECTION - Get updates */
-.subscribe {
+section.subscribe {
   background-color: #e9eef1;
   color: #11172d;
   text-align: center;
@@ -297,8 +338,8 @@ fieldset {
 
   nav.flexbox {
     display: flex;
-    justify-content: end;
-    align-items: center;
+    justify-content: flex-end;
+    align-items: flex-end;
     width: 100%;
     height: 110px;
     box-sizing: border-box;
@@ -307,6 +348,8 @@ fieldset {
 
   nav ul {
     display: flex;
+    align-items: flex-end;
+    gap: 50px;
   }
 
   .icon {
@@ -314,9 +357,8 @@ fieldset {
   }
 
   figure {
-    display: flex;
-    justify-content: space-evenly;
-    margin: 25px;
+    margin: 0;
+    align-self: flex-end;
   }
 }
 
@@ -340,6 +382,8 @@ fieldset {
 
   nav ul {
     display: flex;
+    gap: 50px;
+    align-items: flex-end;
   }
 
   .nav-text {
@@ -351,9 +395,7 @@ fieldset {
   }
 
   figure {
-    display: flex;
-    justify-content: space-evenly;
-    margin: 25px;
+    margin: 10px;
   }
 
   .hamburger {
