--- a/css/styles.css
+++ b/css/styles.css
@@ -248,7 +248,7 @@ footer {
   width: 100%;
   min-height: 48vh;
   max-height: 88vh;
-  margin-bottom: 50px;
+  margin-bottom: 45px;
 }
 .item-shop-men {
   background-image: url(../images/home-man.jpg);
@@ -270,7 +270,6 @@ footer {
 .wrapper {
   display: inline-grid;
   grid-template-columns: 0.5fr 2.5fr 0.5fr;
-  gap: 10px;
   grid-auto-rows: minmax(100px, auto);
   justify-items: center;
   align-items: center;
@@ -278,8 +277,7 @@ footer {
 .bottom {
   grid-column: 2;
   grid-row: 3;
-  width: fit-content;
-  block-size: fit-content;
+  align-self: flex-start;
 }
 
 /* SECTION - waterproof */
@@ -439,8 +437,7 @@ section.subscribe {
 }
 
 /* MEDIA QUERIES */
-@media (min-width: 648px) and (max-width: 992px) {
-  /* header & nav */
+@media (min-width: 648px) {
   nav {
     display: flex;
     align-items: center;
@@ -468,46 +465,29 @@ section.subscribe {
     display: inline;
   }
 
-  figure {
-    margin: 0;
-    align-self: flex-end;
-  }
-
   footer {
     padding: 30px 25%;
   }
 }
 
+@media (min-width: 648px) and (max-width: 992px) {
+  figure {
+    margin: 0;
+    align-self: flex-end;
+  }
+}
+
 @media (min-width: 992px) {
   /* Header & navigation */
-  nav {
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    box-sizing: border-box;
-  }
+
   nav.flexbox {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    height: 110px;
-    box-sizing: border-box;
-    gap: 25px;
-  }
-
-  nav ul {
-    display: flex;
-    gap: 50px;
-    align-items: flex-end;
   }
 
   .nav-text {
     display: flex;
-  }
-
-  .icon {
-    display: inline;
   }
 
   figure {
@@ -518,8 +498,8 @@ section.subscribe {
     display: none;
   }
 
-  footer {
-    padding: 30px 25%;
+  .bottom {
+    align-self: center;
   }
 
   /* Shop navigation with CTA's */
