--- a/css/styles.css
+++ b/css/styles.css
@@ -154,8 +154,8 @@ header.flexbox {
   width: 100%;
   height: 110px;
   box-sizing: border-box;
-  gap: 25px;
-  padding-right: 30px;
+  gap: 20px;
+  padding-right: 20px;
 }
 
 .logo-home {
@@ -176,39 +176,77 @@ figure {
 figure figcaption {
   font-size: smaller;
   padding: 5px;
+  text-transform: uppercase;
 }
 
 .hamburger {
   flex-grow: 0;
-  z-index: 999;
+  z-index: 990;
+  margin-left: 5px;
 }
 
-.hamburger img, figure img {
+.hamburger img, nav img {
   width: 24px;
 }
 .nav-text, .icon {
   display: none;
 }
 
-nav {
+nav, #icons{
   flex-grow: 1;
   display: inline-flex;
   justify-content: flex-end;
-  gap: 25px;
+  gap: 20px;
   align-items: center;
 }
 
+/* Search */
+
+.search-toggle {
+  position: absolute;
+}
+
+.search-toggle input[type="text"] {
+  padding: 15px 20px 16px 20px;
+  box-sizing: border-box;
+  border: none;
+  background-color: var(--light-blue);
+  border-radius: 50px 0 0 50px;
+  width: 80%;
+}
+
+.search-toggle input[type="text"]:focus {
+  outline: 2px solid var(--bright-blue);
+}
+
+.search-toggle button {
+  width: 20%;
+  position: relative;
+  float: right;
+  background-color: var(--light-blue);
+  border: none;
+  padding: 10px;
+  border-radius: 0 50px 50px 0;
+}
+
+.search-toggle button:hover {
+  background-color: var(--light-grey);
+}
+
 .nav-text {
-  background-color:#e9eef1;
+  background-color: var(--light-grey);
   padding: 50px;
 }
 .nav-text a {
-  color: #11172d;
+  color: var(--dark-blue);
+  font-family: "quattrocento", serif;
+  line-height: 3;
 }
 
 #hamburger-menu {
   display: none;
 }
+
 #hamburger-menu:checked ~ .nav-text{
   display: block;
   z-index: 800;
@@ -523,11 +561,8 @@ section.subscribe {
   }
 
   .nav-text a {
-    color: #f5fafc;
-  }
-
-  figure {
-    margin: 10px;
+    color: var(--light-blue);
+    font-family: "Quattrocento Sans", Verdana, Tahoma, sans-serif;
   }
 
   .hamburger {
