--- a/css/styles.css
+++ b/css/styles.css
@@ -577,6 +577,104 @@ button.filter {
   text-decoration: line-through;
 }
 
+/* ---- JACKET SPECIFIC ---- */
+/* Slideshow */
+.slideshow ol, .slideshow li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.slideshow {
+  position: relative;
+  width: 100%;
+  height: 400px;
+}
+
+.slideshow-view {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  overflow-x: scroll;
+  scroll-behavior: smooth;
+  scroll-snap-type: mandatory;
+}
+
+.slideshow-slide {
+  position: relative;
+  flex: 0 0 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+.slideshow-slide:before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%,-40%,70px);
+}
+
+.slideshow-snapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  scroll-snap-align: center;
+}
+
+
+.slideshow .slide-img {
+width: 100%;
+position: relative;
+top: -30%;
+}
+  /*
+  background-image: url(/images/products/red.jpg);
+  background-size: cover;
+  background-position: center;
+  z-index: 53;
+}*/
+
+#slide2 {
+  background-image: url(/images/products/red2.jpg);
+  background-size: cover;
+  background-position: center;
+  z-index: 53;
+}
+
+#slide3 {
+  background-image: url(/images/products/red3.jpg);
+  background-size: cover;
+  background-position: center;
+  z-index: 53;
+
+}
+
+.slide-prev, 
+.slide-next {
+  position: absolute;
+  top: 0;
+  width: 50px;
+  height: 100%;
+  background-color: rgba(245,250,252, .4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.slide-prev img,
+.slide-next img {
+  height: 24px;
+}
+
+.slide-next {
+  right: 0;
+
+}
 
 /* MEDIA QUERIES */
 @media (min-width: 648px) {
